# hierarchical-attention-pooling-for-molecular-scaffold-transfer

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
results/: config.yaml  results.json  training_history.json
results/evaluation/: metrics.json  test_per_class_metrics.json
scripts/: evaluate.py  predict.py  train.py
src/hierarchical_attention_pooling_for_molecular_scaffold_transfer/: __init__.py
src/hierarchical_attention_pooling_for_molecular_scaffold_transfer/data/: __init__.py  loader.py  preprocessing.py
src/hierarchical_attention_pooling_for_molecular_scaffold_transfer/evaluation/: __init__.py  analysis.py  metrics.py
src/hierarchical_attention_pooling_for_molecular_scaffold_transfer/training/: trainer.py
src/hierarchical_attention_pooling_for_molecular_scaffold_transfer/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
